# docs/swagger.yaml
@@ -112,6 +112,15 @@ definitions:
       total:
         type: integer
     type: object
+  service.Studio:
+    properties:
+      count:
+        type: integer
+      id:
+        type: integer
+      name:
+        type: string
+    type: object
   service.UserAnime:
     properties:
       anime_id:
@@ -601,6 +610,85 @@ paths:
       summary: Get genre by id.
       tags:
       - Genre
+  /studios:
+    get:
+      parameters:
+      - description: name
+        in: query
+        name: name
+        type: string
+      - default: 1
+        description: page
+        in: query
+        name: page
+        type: integer
+      - default: 20
+        description: limit
+        in: query
+        name: limit
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/utils.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/service.Studio'
+                  type: array
+                meta:
+                  $ref: '#/definitions/service.Pagination'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/utils.Response'
+      summary: Get studio list.
+      tags:
+      - Studio
+  /studios/{studioID}:
+    get:
+      parameters:
+      - description: studio id
+        in: path
+        name: studioID
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/utils.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/service.Studio'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/utils.Response'
+      summary: Get studio by id.
+      tags:
+      - Studio
   /user/{username}/anime:
     get:
       parameters:
